<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="100dp"
    android:background="@drawable/gang_up_alertdialog_back"
    android:orientation="vertical">

    <EditText
        android:id="@+id/gang_up_channel_name_editText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"

        android:hint="@string/edittext_gang_up_channel_name"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/create_gang_up_channel"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:alpha="0.5"
            android:background="@drawable/game_gang_up_back"
            android:onClick="createGangUpChannelClick"
            android:textColor="#05438b"
            android:text="@string/game_create_channel_name"
            android:typeface="monospace" />

        <Button
            android:id="@+id/join_gang_up_channel"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:alpha="0.5"
            android:background="@drawable/game_gang_up_back"
            android:text="@string/game_join_channel"
            android:textColor="#05438b"
            android:onClick="joinGangUpChannel"
            android:typeface="monospace" />

    </LinearLayout>

</LinearLayout>