<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#419aff"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="110dp"
            android:text="Agora HQ"
            android:textColor="#ffff"
            android:textSize="35sp"
            android:textStyle="bold" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginLeft="50dp"
            android:id="@+id/image_question"
            android:clickable="true"
            android:scaleType="fitCenter"
            android:background="@drawable/home_tutorial" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/next_game_time"
        android:textSize="25sp"
        android:textColor="#fff"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:textSize="25sp"
            android:layout_marginTop="15dp"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:textStyle="bold"

            android:layout_height="wrap_content"
            android:text="@string/the_day_and_the_money"/>

    </LinearLayout>

    <Button
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/start_play_game"

        android:textStyle="bold"
        android:textColor="#de3"
        android:textSize="20sp"
        android:id="@+id/btnStartPlayGame"
        android:layout_gravity="center"
        android:alpha="0.4"
        android:background="@drawable/button_select"/>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_marginTop="25dp"
        android:layout_height="350dp"
        android:layout_gravity="center_horizontal"
        android:background="#fff">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="fitCenter"
                android:background="@drawable/user_main"/>

            <TextView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:text="Label"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>