<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/content_view_bg"
    android:orientation="vertical">

    <FrameLayout
        android:onClick="onQuestionImageClick"
        android:layout_gravity="right"
        android:layout_width="64dp"
        android:layout_height="64dp">
        <ImageButton
            android:id="@+id/image_question"
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@drawable/question_image"
            android:scaleType="fitXY" />
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/title_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/game_title"
            android:textColor="@color/black"
            android:textSize="35sp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="6dp"
        android:gravity="center"
        android:text="@string/next_game_time"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/the_day_and_the_money"
            android:textColor="@color/black"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/channel_name_editText"
            android:layout_width="165dp"
            android:layout_height="32dp"
            android:gravity="center"
            android:background="@drawable/channel_name_edittext"
            android:hint="Channel Name"
            style="@style/agora_edit_style"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnStartPlayGame"
            android:layout_width="120dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:background="@drawable/icon_start_game"
            android:gravity="center"
            android:onClick="startPlayClick"
            android:text="@string/start_play_game"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:typeface="monospace" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="16dp"
            android:layout_weight="6"
            android:background="@drawable/icon_and_name"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <agora.io.agorahq.ui.CircleImageView
                    android:id="@+id/user_image"
                    android:layout_width="62dp"
                    android:layout_height="62dp"
                    android:layout_gravity="center_horizontal"
                    android:onClick="onUserImageClicked"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icon_default_user" />


                <EditText
                    android:id="@+id/user_label"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="6dp"
                    android:background="@null"
                    android:enabled="true"
                    android:gravity="center"
                    style="@style/agora_edit_style"
                    android:textColor="#000"
                    android:textSize="18sp"/>

            </LinearLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="75dp"
                    android:layout_marginLeft="9dp"
                    android:layout_marginRight="9dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/main_money_image" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="5">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center_horizontal|bottom"
                                android:text="@string/string_money_300"
                                android:textColor="@color/gray"
                                android:textSize="15sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_marginTop="20dp"
                                android:layout_weight="2"
                                android:gravity="center_horizontal|top"
                                android:text="@string/string_money_300"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center_horizontal|bottom"
                                android:text="@string/string_money_300"
                                android:textColor="@color/gray"
                                android:textSize="15sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_marginTop="20dp"
                                android:layout_weight="2"
                                android:gravity="center_horizontal|top"
                                android:text="@string/string_money_120"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                        </LinearLayout>

                    </LinearLayout>


                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="20dp"
                        android:layout_weight="2"
                        android:gravity="bottom"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="50dp"
                            android:gravity="center"
                            android:text="@string/string_money_300"
                            android:textColor="@color/gray"
                            android:textSize="13dp" />

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:scaleType="fitCenter"
                            android:src="@drawable/icon_hear_left" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_gravity="right|center_vertical"
                            android:layout_marginRight="20dp"
                            android:alpha="0.5"
                            android:background="@drawable/main_button_more_bg"
                            android:text="@string/string_get_more"
                            android:textColor="#0543BF"
                            android:textSize="15dp"
                            android:typeface="monospace" />
                    </FrameLayout>

                </LinearLayout>

            </FrameLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:layout_weight="3"
                android:layout_width="0dp"
                android:textSize="16sp"
                android:layout_marginBottom="6dp"
                android:layout_height="42dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_gravity="center"
                android:alpha="0.6"
                android:background="@drawable/main_invisit_and_rank"
                android:text="@string/ranking_list" />

            <View
                android:visibility="invisible"
                android:alpha="0"
                android:layout_weight="0.3"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <Button
                android:textSize="16sp"
                android:layout_marginBottom="6dp"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="42dp"
                android:layout_weight="3"
                android:alpha="0.6"
                android:background="@drawable/main_invisit_and_rank"
                android:text="@string/text_invite_friends" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>