<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/game_view_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_background">


    <FrameLayout
        android:id="@+id/live_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>

    <FrameLayout
        android:layout_width="140dp"
        android:layout_height="250dp"
        android:id="@+id/small_video"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="10dp"
        android:visibility="gone"
        android:background="@drawable/small_video_back"
        android:layout_marginBottom="50dp"></FrameLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/gangUpUidRecycleView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginRight="13dp"
        android:layout_gravity="right"
        android:visibility="visible"
        android:alpha="0.5"
        android:background="@drawable/game_gang_up_back"
        ></android.support.v7.widget.RecyclerView>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:layout_marginTop="35dp">

        <ImageView
            android:id="@+id/back_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="right">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:id="@+id/game_gang_up_btn"
                android:alpha="0.5"
                android:padding="3dp"
                android:background="@drawable/game_gang_up_back"
                android:onClick="gangUpClick"
                android:text="@string/gang_up_string" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:id="@+id/disConnectVideo"
                android:layout_marginTop="10dp"
                android:alpha="0.5"
                android:padding="3dp"
                android:background="@drawable/game_gang_up_back"
                android:clickable="false"
                android:textSize="10sp"
                android:visibility="gone"
                android:onClick="disConnectVideo"
                android:text="Disconnect" />
        </LinearLayout>
    </FrameLayout>

    <ImageView
        android:id="@+id/image_sendMessage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/live_barrage"
        android:scaleType="fitXY" />


    <LinearLayout
        android:id="@+id/sendMessage_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#fff"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:id="@+id/input_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"

            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:maxLines="4"
            android:textColor="#000" />

        <TextView
            android:id="@+id/sendMessage_text"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_weight="5"
            android:background="@drawable/input_send_button"
            android:enabled="false"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/btn_send_message"
            android:textColor="#ffffff"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- <include
         android:id="@+id/input_layout"
         layout="@layout/widget_input_panel"></include>-->





    <ImageView
        android:id="@+id/game_result"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:visibility="gone" />

    <!-- <Button
         android:layout_width="200dp"
         android:layout_gravity="bottom|center_horizontal"
         android:layout_marginBottom="100dp"
         android:layout_height="60dp"
         android:id="@+id/test_btn"
         android:visibility="gone"
         android:text="testButton"/>-->

    <RelativeLayout
        android:id="@+id/answer_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/messageRecycleView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"

            android:layout_marginBottom="187dp"></android.support.v7.widget.RecyclerView>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/game_layout"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/question_layout"
        android:orientation="vertical"
        android:visibility="gone">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/time_reduce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:typeface="monospace" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/question_agora_title" />


        </FrameLayout>

        <TextView
            android:id="@+id/game_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="title"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/wheather_canplay_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:id="@+id/question_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"></LinearLayout>

        <Button

            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/submit_btn"
            android:text="@string/submit_string"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>




</FrameLayout>
